# login

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Justfile  README.md  compose.yaml  docker-compose.yml  hanko-config.yaml.example  mkdocs.yml
.github/workflows/: build-images.yml  build-prod.yml  deploy-dev.yml  deploy-production.yml  deploy-testing.yml  release-chart.yml  release_chart.yaml
auth-libs/: README.md
auth-libs/python/: README.md  pyproject.toml
auth-libs/python/src/hotosm_auth/: __init__.py  config.py  crypto.py  exceptions.py  jwt_validator.py  logger.py  models.py  osm_oauth.py  remote_resolver.py
auth-libs/python/src/hotosm_auth/schemas/: __init__.py  admin.py
auth-libs/python/src/hotosm_auth_django/: __init__.py  admin_routes.py  apps.py  middleware.py  models.py  osm_views.py
auth-libs/python/src/hotosm_auth_fastapi/: __init__.py  admin.py  admin_routes.py  admin_routes_psycopg.py  db_models.py  dependencies.py  osm_routes.py  setup.py
auth-libs/python/src/hotosm_auth_litestar/: __init__.py  admin.py  admin_routes.py  dependencies.py  osm_routes.py  setup.py
auth-libs/python/tests/: conftest.py  test_admin_routes.py  test_config.py  test_crypto.py  test_crypto_errors.py  test_django_admin_routes.py  test_django_middleware.py  test_django_osm_views.py  test_exceptions.py  test_fastapi_dependencies.py  test_fastapi_osm_routes.py  test_fastapi_setup.py  test_jwt_validation.py  test_jwt_validator.py  test_litestar_admin_routes.py  test_litestar_dependencies.py  test_litestar_osm_routes.py  test_litestar_setup.py  test_models.py  test_osm_cookie.py  test_osm_oauth.py
auth-libs/scripts/: build.sh  distribute.sh
auth-libs/web-component/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
auth-libs/web-component/src/: hanko-auth.styles.ts  hanko-auth.ts  hanko-i18n-en.ts  hanko-i18n-es.ts  hanko-i18n-fr.ts  hanko-i18n-pt.ts  hanko-translations.ts  translations.ts
backend/: .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_user_profiles.py  002_create_user_api_tokens.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  admin.py  api_token.py  profile.py
backend/app/core/: apps.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/schemas/: __init__.py  api_token.py  profile.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-nginx-configmap.yaml  frontend-service.yaml  ingress.yaml
docs/: README.md  integration-guide.md  mkdocs.yml  python-libs.md
docs/projects/: fair.md
docs/src/: README.md  admin.md  index.md  integration-guide.md  overview.md  python-libs.md  web-component.md
docs/src/projects/: chatmap.md  drone-tm.md  fair.md  oam.md  portal.md  umap.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/auth-libs/web-component/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
frontend/auth-libs/web-component/src/: hanko-auth.ts
frontend/public/docs/: 404.html  admin.html  index.html  integration-guide.html  overview.html  python-libs.html  sitemap.xml  web-component.html
frontend/public/docs/javascripts/: mermaid-zoom.js
frontend/public/docs/projects/: chatmap.html  drone-tm.html  fair.html  portal.html  umap.html
frontend/public/docs/search/: search_index.js  search_index.json
frontend/public/docs/stylesheets/: extra.css
frontend/src/: App.tsx  index.css  main.tsx  translations.ts  vite-env.d.ts
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx
frontend/src/pages/: AdminPage.tsx  LoginPage.tsx  ProfilePage.tsx
frontend/src/styles/: hot.css
frontend/src/types/: hanko-auth.d.ts  web-awesome.d.ts
frontend/src/utils/: validateReturnTo.ts
osm-userinfo/: Dockerfile  README.md  build.sh  go.mod  main.go
scripts/: deploy-manual.sh
tests/authelia/: compose.yml  setup.sh
tests/authelia/authelia/: .gitignore
tests/authelia/traefik/certs/: private.pem  public.crt
tests/hanko/: compose.yaml  config.yaml
