[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotosm-auth"
version = "0.2.11"
description = "HOTOSM SSO authentication library for Hanko + OSM OAuth"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "HOTOSM", email = "tech@hotosm.org" },
]
keywords = ["hotosm", "auth", "hanko", "osm", "oauth", "sso", "fastapi", "django", "litestar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Framework :: Django",
]

dependencies = [
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.25.0",
    "cryptography>=46.0.5",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.0",
]
django = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
]
litestar = [
    "litestar>=2.0.0",
    "psycopg>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "psycopg>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/hotosm/login"
Documentation = "https://hotosm.github.io/auth-docs"
Repository = "https://github.com/hotosm/login/tree/main/auth-libs/python"
Issues = "https://github.com/hotosm/login/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hotosm_auth", "src/hotosm_auth_fastapi", "src/hotosm_auth_django", "src/hotosm_auth_litestar"]

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
exclude = [
    ".ruff_cache",
    "src/hotosm_auth_django/migrations",
]
[tool.ruff.lint]
select = ["I", "E", "W", "D", "B", "F", "N", "Q", "C90","B","S","SIM","PLR","C4","PERF"]
ignore = []
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "E402",
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "SIM117",
]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.mccabe]
max-complexity = 10
[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
